--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
+}
+
+.board {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.card {
+	width: 125px;
+	height: 125px;
+	margin: 25px;
+	position: relative;
+	border-radius: 15px;
+  perspective: 600px;
+  background-color: transparent;
+}
+
+.card__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  background-color: transparent;
+}
+
+.card__inner--flipped {
+  transform: rotateY(180deg);
+}
+
+.card__face {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border-radius: 15px;
+}
+
+.card__face--front {
+	height: 100%;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.card__face--front::before {
+	border-radius: 15px;
+	content: "";
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	background-image: url(./assets/svg/Background.svg);
+	opacity: 0.3;
+}
+
+.card__face--back {
+  transform: rotateY( 180deg );
+}
+
+.card__image {
+	width: 125px;
+	height: 125px;
+	border-radius: 15px;
+}
+
+.card__number {
+  font-size: 50px;
+  font-weight: 600;
 }
