--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
 		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background: #f4f4f4;
 }
 
 code {
@@ -15,50 +16,49 @@ code {
 .board {
 	display: flex;
 	flex-wrap: wrap;
+	max-width: 1000px;
+	margin: auto;
+}
+
+.card__outer {
+	flex: 0 1 calc(16.666666% - 20px);
 }
 
 .card {
 	width: 125px;
 	height: 125px;
-	margin: 25px;
+	margin: 20px;
 	position: relative;
-	border-radius: 15px;
-  perspective: 600px;
-  background-color: transparent;
+	perspective: 600px;
 }
 
 .card__inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 1s;
-  transform-style: preserve-3d;
-  background-color: transparent;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 1s;
+	transform-style: preserve-3d;
 }
 
 .card__inner--flipped {
-  transform: rotateY(180deg);
+	transform: rotateY(180deg);
 }
 
 .card__face {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  backface-visibility: hidden;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	backface-visibility: hidden;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	border-radius: 15px;
 }
 
 .card__face--front {
-	height: 100%;
 	position: absolute;
 	top: 0px;
 	right: 0px;
 	bottom: 0px;
 	left: 0px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .card__face--front::before {
@@ -74,7 +74,7 @@ code {
 }
 
 .card__face--back {
-  transform: rotateY( 180deg );
+	transform: rotateY(180deg);
 }
 
 .card__image {
@@ -84,6 +84,77 @@ code {
 }
 
 .card__number {
-  font-size: 50px;
-  font-weight: 600;
+	font-size: 50px;
+	font-weight: 600;
+}
+
+.completed__overlay {
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	background: #00000082 0% 0% no-repeat padding-box;
+}
+
+.completed__message-box {
+	width: 500px;
+	height: 240px;
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: white;
+}
+
+.button {
+	width: 240px;
+	height: 70px;
+	background: #e50a4f;
+	border-radius: 35px;
+	color: white;
+	font: normal normal bold 26px/30px Roboto;
+	border: none;
+	cursor: pointer;
+}
+
+.completed__message {
+	display: flex;
+	justify-content: space-evenly;
+	width: 100%;
+}
+
+.start__icon-container {
+	background: #e7e8e8 0% 0% no-repeat padding-box;
+	box-shadow: 0px 3px 6px #00000033;
+	width: 130px;
+	height: 130px;
+	border-radius: 50%;
+}
+
+.center-content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.start {
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+}
+
+.start__title {
+	font-size: 70px;
+	font-weight: bold;
+	margin-bottom: 80px;
+	margin-top: 20px;
+}
+
+.game {
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	display: flex;
 }
