--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -18,7 +18,7 @@ body .container-background .app-title {
   letter-spacing: -0.35px;
 }
 
-body .container-background .start-button {
+body .container-background .primary-button {
   color: #fff;
   background: #E50A4F 0% 0% no-repeat padding-box;
   border: 0px;
@@ -28,37 +28,77 @@ body .container-background .start-button {
 }
 
 body .container-background .card-list {
-  width: 50%;
+  width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: 0px;
-  list-style: none;
+  padding: 20px;
   margin: auto;
+  list-style-position: inside;
 }
 
 body .container-background .card-list .card-item {
   -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.59);
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.59);
-  width: 50px;
+  width: 100px;
+  height: 100px;
   margin: 10px;
-  padding: 20px;
   vertical-align: middle;
   text-align: center;
   background-image: url("../images/bg-card.svg");
   border-radius: 10px;
 }
 
+body .container-background .card-list .card-item::marker {
+  position: absolute;
+  left: -40px;
+  top: 50%;
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
+  font-weight: bold;
+  font-weight: bold;
+}
+
 body .container-background .card-list .card-item.selected {
   border: 1px solid #E50A4F;
 }
 
-body .container-background .card-list .card-item .span-number {
+body .container-background .card-list .card-item .card-image {
+  display: none;
+  position: relative;
+  top: -21px;
+  z-index: 1000;
+  border-radius: 10px;
+}
+
+body .container-background .card-list .card-item .card-image.show-card {
+  display: block;
+}
+
+body .container-background .modal-response {
   font-weight: bold;
-  padding: 5px;
-  background-color: #fff;
-  border-radius: 2px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 40%;
+  z-index: 1000;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  -webkit-box-shadow: 0px 12px 30px #080808;
+          box-shadow: 0px 12px 30px #080808;
+  border-radius: 20px;
+  opacity: 1;
+  padding: 40px;
+}
+
+body .container-background .modal-response .title-response {
+  margin-right: 20px;
+}
+
+body .container-background .modal-response .primary-button {
+  margin-top: 20px;
 }
 /*# sourceMappingURL=style.css.map */
