--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -16,7 +16,7 @@ body {
             color: #333333;
             letter-spacing: -0.35px;
         }
-        .start-button{
+        .primary-button{
             color: #fff;
             background: #E50A4F 0% 0% no-repeat padding-box;
             border: 0px;
@@ -25,33 +25,67 @@ body {
             padding: 10px;
         }
         .card-list{
-            width: 50%;
+            width: 60%;
             display: flex;
-            flex-wrap:  wrap;
-            padding: 0px;
-            list-style: none;
+            flex-wrap: wrap;
+            padding: 20px;
             margin: auto;
+            list-style-position: inside;
 
             .card-item{
                 -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.59); 
                 box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.59);
-                width: 50px;
+                width: 100px;
+                height: 100px;
                 margin: 10px;
-                padding: 20px;
+                //padding: 20px;
                 vertical-align: middle;
                 text-align: center;
                 background-image: url('../images/bg-card.svg');
                 border-radius: 10px;
-
+                
+                &::marker{
+                    position: absolute;
+                    left: -40px;
+                    top: 50%;
+                    transform: translate(0%,-50%);
+                    font-weight: bold;
+                    font-weight: bold;
+                }
                 &.selected{
                     border: 1px solid #E50A4F;
                 }
-                .span-number{
-                    font-weight: bold;
-                    padding: 5px;
-                    background-color: #fff;
-                    border-radius: 2px;
+                .card-image{
+                    display: none;
+                    position: relative;
+                    top: -21px;
+                    z-index: 1000;
+                    border-radius: 10px;
                 }
+                .card-image.show-card{
+                    display: block;
+                }
+            }
+        }
+        .modal-response{
+            font-weight: bold;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 40%;
+            z-index: 1000;
+            background: #FFFFFF 0% 0% no-repeat padding-box;
+            box-shadow: 0px 12px 30px #080808;
+            border-radius: 20px;
+            opacity: 1;
+            padding: 40px;
+
+            .title-response{
+                margin-right: 20px;
+            }
+            .primary-button{
+                margin-top: 20px;
             }
         }
     }
