--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -11,11 +11,16 @@ body .container-background {
   opacity: 1;
   padding: 40px;
   text-align: center;
-}
-
-body .container-background .app-title {
-  color: #333333;
-  letter-spacing: -0.35px;
+  min-height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 body .container-background .primary-button {
@@ -27,7 +32,27 @@ body .container-background .primary-button {
   padding: 10px;
 }
 
-body .container-background .card-list {
+body .container-background .init-background .logo {
+  margin-top: 8px;
+}
+
+body .container-background .init-background .logo-background {
+  background: #E7E8E8 0% 0% no-repeat padding-box;
+  -webkit-box-shadow: 0px 3px 6px #00000033;
+          box-shadow: 0px 3px 6px #00000033;
+  opacity: 1;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: auto;
+}
+
+body .container-background .init-background .app-title {
+  color: #333333;
+  letter-spacing: -0.35px;
+}
+
+body .container-background .cards-background .card-list {
   width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -36,10 +61,13 @@ body .container-background .card-list {
       flex-wrap: wrap;
   padding: 20px;
   margin: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   list-style-position: inside;
 }
 
-body .container-background .card-list .card-item {
+body .container-background .cards-background .card-list .card-item {
   -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.59);
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.59);
   width: 100px;
@@ -51,21 +79,15 @@ body .container-background .card-list .card-item {
   border-radius: 10px;
 }
 
-body .container-background .card-list .card-item::marker {
-  position: absolute;
-  left: -40px;
-  top: 50%;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
-  font-weight: bold;
+body .container-background .cards-background .card-list .card-item::marker {
   font-weight: bold;
 }
 
-body .container-background .card-list .card-item.selected {
+body .container-background .cards-background .card-list .card-item.selected {
   border: 1px solid #E50A4F;
 }
 
-body .container-background .card-list .card-item .card-image {
+body .container-background .cards-background .card-list .card-item .card-image {
   display: none;
   position: relative;
   top: -21px;
@@ -73,11 +95,11 @@ body .container-background .card-list .card-item .card-image {
   border-radius: 10px;
 }
 
-body .container-background .card-list .card-item .card-image.show-card {
+body .container-background .cards-background .card-list .card-item .card-image.show-card {
   display: block;
 }
 
-body .container-background .modal-response {
+body .container-background .cards-background .modal-response {
   font-weight: bold;
   position: fixed;
   top: 50%;
@@ -94,11 +116,11 @@ body .container-background .modal-response {
   padding: 40px;
 }
 
-body .container-background .modal-response .title-response {
+body .container-background .cards-background .modal-response .title-response {
   margin-right: 20px;
 }
 
-body .container-background .modal-response .primary-button {
+body .container-background .cards-background .modal-response .primary-button {
   margin-top: 20px;
 }
 /*# sourceMappingURL=style.css.map */
