--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -11,11 +11,11 @@ body {
         opacity: 1;
         padding: 40px;
         text-align: center;
-
-        .app-title{
-            color: #333333;
-            letter-spacing: -0.35px;
-        }
+        min-height: 90vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
         .primary-button{
             color: #fff;
             background: #E50A4F 0% 0% no-repeat padding-box;
@@ -24,68 +24,85 @@ body {
             opacity: 1;
             padding: 10px;
         }
-        .card-list{
-            width: 60%;
-            display: flex;
-            flex-wrap: wrap;
-            padding: 20px;
-            margin: auto;
-            list-style-position: inside;
 
-            .card-item{
-                -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.59); 
-                box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.59);
+        .init-background{
+            .logo{
+                margin-top: 8px;
+            }
+            .logo-background{
+                background: #E7E8E8 0% 0% no-repeat padding-box;
+                box-shadow: 0px 3px 6px #00000033;
+                opacity: 1;
                 width: 100px;
                 height: 100px;
-                margin: 10px;
-                //padding: 20px;
-                vertical-align: middle;
-                text-align: center;
-                background-image: url('../images/bg-card.svg');
-                border-radius: 10px;
-                
-                &::marker{
-                    position: absolute;
-                    left: -40px;
-                    top: 50%;
-                    transform: translate(0%,-50%);
-                    font-weight: bold;
-                    font-weight: bold;
-                }
-                &.selected{
-                    border: 1px solid #E50A4F;
-                }
-                .card-image{
-                    display: none;
-                    position: relative;
-                    top: -21px;
-                    z-index: 1000;
-                    border-radius: 10px;
-                }
-                .card-image.show-card{
-                    display: block;
-                }
+                border-radius: 50%;
+                margin: auto;
+            }
+            .app-title{
+                color: #333333;
+                letter-spacing: -0.35px;
             }
         }
-        .modal-response{
-            font-weight: bold;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 40%;
-            z-index: 1000;
-            background: #FFFFFF 0% 0% no-repeat padding-box;
-            box-shadow: 0px 12px 30px #080808;
-            border-radius: 20px;
-            opacity: 1;
-            padding: 40px;
-
-            .title-response{
-                margin-right: 20px;
+        .cards-background {
+            .card-list{
+                width: 60%;
+                display: flex;
+                flex-wrap: wrap;
+                padding: 20px;
+                margin: auto;
+                justify-content: center;
+                list-style-position: inside;
+    
+                .card-item{
+                    -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.59); 
+                    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.59);
+                    width: 100px;
+                    height: 100px;
+                    margin: 10px;
+                    //padding: 20px;
+                    vertical-align: middle;
+                    text-align: center;
+                    background-image: url('../images/bg-card.svg');
+                    border-radius: 10px;
+                    
+                    &::marker{
+                        font-weight: bold;
+                    }
+                    &.selected{
+                        border: 1px solid #E50A4F;
+                    }
+                    .card-image{
+                        display: none;
+                        position: relative;
+                        top: -21px;
+                        z-index: 1000;
+                        border-radius: 10px;
+                    }
+                    .card-image.show-card{
+                        display: block;
+                    }
+                }
             }
-            .primary-button{
-                margin-top: 20px;
+            .modal-response{
+                font-weight: bold;
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 40%;
+                z-index: 1000;
+                background: #FFFFFF 0% 0% no-repeat padding-box;
+                box-shadow: 0px 12px 30px #080808;
+                border-radius: 20px;
+                opacity: 1;
+                padding: 40px;
+    
+                .title-response{
+                    margin-right: 20px;
+                }
+                .primary-button{
+                    margin-top: 20px;
+                }
             }
         }
     }
