--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -52,6 +52,8 @@ body {
                 margin: auto;
                 justify-content: center;
                 list-style-position: inside;
+                list-style: none;
+                counter-reset: card-counter;
     
                 .card-item{
                     -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.59); 
@@ -59,14 +61,19 @@ body {
                     width: 100px;
                     height: 100px;
                     margin: 10px;
-                    //padding: 20px;
                     vertical-align: middle;
                     text-align: center;
                     background-image: url('../images/bg-card.svg');
                     border-radius: 10px;
+                    counter-increment: card-counter;
                     
-                    &::marker{
+                    &::before{
+                        content: counter(card-counter);
+                        display: block;
                         font-weight: bold;
+                        text-align: center;
+                        font-size: 36px;
+                        margin: 20px auto;
                     }
                     &.selected{
                         border: 1px solid #E50A4F;
@@ -74,7 +81,7 @@ body {
                     .card-image{
                         display: none;
                         position: relative;
-                        top: -21px;
+                        top: -88px;
                         z-index: 1000;
                         border-radius: 10px;
                     }
