--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -3,8 +3,10 @@
   --bgLogo: #e7e8e8;
   --black: #000000;
   --btn: #e50a4f;
+  --icon: #999999;
   --shadowCard: #00000040;
   --shadowLogo: #00000033;
+  --shadowModal: #00000099;
   --text: #333333;
   --white: #ffffff;
   --font: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -16,9 +18,6 @@ body {
   font-family: var(--font);
   height: 100%;
   margin: 0;
-  & > div {
-    height: 100%;
-  }
   h1,
   p {
     color: var(--text);
@@ -32,7 +31,7 @@ body {
   align-items: center;
   background: transparent linear-gradient(180deg, var(--background) 0%, var(--bgLogo) 100%) 0% 0% no-repeat padding-box;
   display: flex;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   width: 100%;
 }
