--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -4,12 +4,34 @@
   flex: 1 0 14%;
   cursor: pointer;
   height: auto;
-  background-image: url(../../assets/images/bg_card.svg);
   font: normal normal bold 40px/47px Roboto;
   letter-spacing: 0px;
   align-items: center;
   justify-content: center;
   display: flex;
+  position: relative;
+  box-shadow: 0px 4px 7px #00000040;
+  border-radius: 10px;
+  .bgcard {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .imagecard {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
   &::before {
     content: "";
 
