Basic styling and cleanup

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,215 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-weight: bold;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.shadow {
+    box-shadow: 0px 4px 7px #00000040;
 }
 
-.shadow {
-    box-shadow: 0px 3px 6px #00000033;
+.shadow-lg {
+    box-shadow: 0px 12px 30px #00000099;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-col {
+    flex-direction: column;
+}
+
+.block {
+    display: block;
+}
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.rounded {
+    border-radius: 10px;
+}
+
+.rounded-lg {
+    border-radius: 35px;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.relative {
+    position: relative;
+}
+
+.absolute {
+    position: absolute;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.inset-0 {
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    top: 0px;
+}
+
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ml-auto {
+    margin-left: auto;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.max-w-xl {
+    max-width: 780px;
+}
+
+.min-h-screen {
+    min-height: 100vh;
+}
+
+.bg-white {
+    background-color: #FFFFFF;
+}
+
+.bg-gray {
+    background-color: #E7E8E8;
+}
+
+.bg-gradient {
+    background: linear-gradient(180deg, rgb(244, 244, 244) 0%, rgb(231, 232, 232) 100%);
+}
+
+.rounded-full {
+    border-radius: 9999px;
+}
+
+.select-none {
+    user-select: none;
+}
+
+.text-white {
+    color: white;
+}
+
+.text-black {
+    color: #333333;
+}
+
+.text-lg {
+    font-size: 26px;
+    line-height: 30px;
+}
+
+.text-xl {
+    font-size: 32px;
+    line-height: 38px;
+}
+
+.text-2xl {
+    font-size: 40px;
+    line-height: 47px;
+}
+
+.text-3xl {
+    font-size: 60px;
+    line-height: 71px;
+}
+
+.text-4xl {
+    font-size: 71px;
+    line-height: 72px;
+}
+
+.bg-pink {
+    background-color: #E50A4F;
+}
+
+.hover\:bg-pink-light:hover {
+    background-color: #B5083F;
+}
+
+.focus\:bg-pink-light:focus {
+    background-color: #B5083F;
+}
+
+.transition-colors {
+    transition-property: background-color, border-color, color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+}
+
+.transition-transform {
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+}
+
+.hover\:scale-110:hover {
+    transform: scale(1.1);
+}
+
+.focus\:scale-110:focus {
+    transform: scale(1.1);
+}
+
+.opacity-20 {
+    opacity: 0.2;
+}
+
+.ml-1 {
+    margin-left: 10px;
+}
+
+.p-2 {
+    padding: 15px;
+}
+
+.mt-3 {
+    margin-top: 18px;
+}
+
+.mt-5 {
+    margin-top: 32px;
+}
+
+.mt-7 {
+    margin-top: 79px;
+}
+
+.px-6 {
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.py-4 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.pt-7 {
+    padding-top: 79px;
 }
