Add sass, router and redux dependencies, improve project architecture

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,12 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900');
 
 html,
-body {
+body, #root {
     margin: 0;
     height: 100%;
     width: 100%;
-    line-height: 1.42857143;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
