--- a/src/components/Game/game.module.css
+++ b/src/components/Game/game.module.css
@@ -1,8 +1,6 @@
-.card {
-  height: 200px;
-  width: 160px;
-  border-radius: 5px;
-  background-image: url('../../assets/cards/facedown-card.svg');
-  background-size: cover;
+.cardList {
   list-style: none;
+  display: grid;
+  grid-template-columns: 150px 150px 150px;
+  grid-template-rows: auto;
 }
