--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -1,14 +1,25 @@
-.card {
-  border-radius: 5px;
-  background-size: cover;
+.cardWrapper {
   list-style: none;
-  height: 150px;
-  width: 120px;
-  margin: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.card {
+  height: 100px;
+  width: 100px;
 }
 
 .faceDown {
   background-image: url('../../assets/cards/facedown-card.svg');
+  border-radius: 10px;
+}
+
+.position {
+  line-height: 100px;
+  text-align: center;
+  margin: 0;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .card1 {
