--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -2,11 +2,13 @@
   list-style: none;
   background-color: white;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .card {
   height: 100px;
   width: 100px;
+  border-radius: 10px;
 }
 
 .faceDown {
