--- a/src/components/Game/game.module.css
+++ b/src/components/Game/game.module.css
@@ -4,15 +4,8 @@
   grid-gap: 20px;
   margin-top: 30px;
   padding: 0;
-  grid-template-columns: auto;
+  grid-template-columns: repeat(auto-fill, 100px);
 }
-
-@media (min-width: 350px) {
-  .cardList {
-    grid-template-columns: repeat(3, min-content);
-  }
-}
-
 @media (min-width: 720px) {
   .cardList {
     margin: 120px 0;
