feat: add styles to home view

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
   --color-primary: #E50A4F;
   --color-secondary: #333333;
   --color-tertiary: #F4F4F4;
+
   --color-white: #ffffff;
+  --color-gray: #E7E8E8;
 }
 
 *,
