--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
   --color-gray: #E7E8E8;
 }
 
+@font-face {
+  font-family: Roboto;
+  src: url(../public/fonts/Roboto-Bold.ttf);
+  font-weight: bold;
+}
+
 *,
 *::before,
 *::after {
@@ -14,7 +20,7 @@
 }
 
 html {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
