HighScore button and component added.

--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -9,6 +9,18 @@
     border-radius: 35px;
 }
 
+.outline {
+    background-color: transparent;
+    border: 1px solid var(--primary-color);
+    font-size: 1.6rem;
+    font-weight: bold;
+    cursor: pointer;
+    width: 15rem;
+    height: 4.4rem;
+    color: var(--primary-color);
+    border-radius: 35px;
+}
+
 .button:hover {
     background-color: var(--primary-color-hover);
 }
