--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
     --primary-color-hover: #D20847;
     --box-shadow: #CCC;
     --gray-background: #E7E8E8;
+    --border-color: #CCC;
 }
 body {
     font-family: 'Roboto', sans-serif;
